2005-12-09  Stipe Tolj  <stolj at kannel.org>
   Patchset to include OMA ProvCont OTA provisioning support.
   * configure[.in]: adding <openssl/hmac.h> scan required for OMA ProvCont
     HMAC computing.
   * gw/ota_[compiler|prov].[ch], gw/smsbox.c: adding OMA ProvCont support.      
   * gw/xml_shared.[ch]: adding specific charset MIB enum codes used widely,
     adding code_page integer to handle while WBXML compilation.
   Thanks to Paul Bagyenda, Paul P Komkoff Jr and Edward C.A. Tromp for 
   development of OMA ProvCont OTA support.
   [URL: http://www.mbuni.org/downloads/1.0.0/mbuni-kannel-patch-full]
   
2005-12-08  Stipe Tolj  <stolj at kannel.org>
   * wap/wap_addr.[ch]: performance gain by using int compare rather then
     Octstr compare within wap_addr_same(). We need to call this at various
     places within the WAP layers and this will increase peformance on 
     significantly on production high-load systems.

2005-12-07  Stipe Tolj  <stolj at kannel.org>
   * doc/userguide/userguide.xml: add new 'remote-timeout' directive to RADIUS
     accounting proxy section.
   * gwlib/cfg.def: adding 'remote-timout' to 'radius-acct' group.
   * radius/radius_acct.c: fixing blocking state if remote RADIUS does not
     answer within pre-defined timeout. This ensures that the proxy operation
     continues. Thanks to Deon van der Merwe <deonvandermerwe@gmail.com> for 
     this fix and included patch.
     [Msg-Id: <a9bcf42b0512070336x6e323b2eg9663a4e519abdd3e@mail.gmail.com]
     
2005-11-29  Stipe Tolj  <stolj at kannel.org>
   * Makefile.in: adding 'install' target components for wap library, including
     heaeders. Mainly this is a sync towards compatibility needs from Mbuni
     MMS gateway project.

2005-11-11  Alexander Malysh <amalysh at kannel.org>
   * gwlib/counter.c: allow calling counter_destroy with a NULL just for 
     convenience.

2005-11-11  Alexander Malysh <amalysh at kannel.org>